objects/ALTF__Account_Solution__c.object
<CustomObject>
    <description>Join between a Salesforce Account and the Altify Solution</description>
    <fields>
        <fullName>ALTF__Account_Division__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account Division</label>
        <referenceTo>ALTF__Account_Division__c</referenceTo>
        <relationshipName>Account_Solution_Division</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <description>Master/Detail reference to a Salesforce Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Account Solutions</relationshipLabel>
        <relationshipName>Account_Solutions1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Block_Reason__c</fullName>
        <label>Block Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Competitor_Share__c</fullName>
        <label>Competitor Wallet Value</label>
        <summarizedField>ALTF__Account_Solution_Competitor__c.ALTF__Wallet_Value__c</summarizedField>
        <summaryForeignKey>ALTF__Account_Solution_Competitor__c.ALTF__Account_Solution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ALTF__Other_Note__c</fullName>
        <label>Other Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Other_Share__c</fullName>
        <formula>IF(ISNULL(ALTF__Wallet_Size__c ), 
            NULL,  
            IF(ALTF__Wallet_Size__c == 0, 0, ALTF__Other_Wallet_Size__c /  ALTF__Wallet_Size__c))</formula>
        <label>Other Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Other_Wallet_Size__c</fullName>
        <formula>IF(ISNULL(ALTF__Wallet_Size__c ), NULL, ALTF__Wallet_Size__c -   IF( ISNULL(ALTF__Competitor_Share__c) , 0, ALTF__Competitor_Share__c) -   IF( ISNULL(ALTF__Our_Wallet_Value__c) , 0, ALTF__Our_Wallet_Value__c) )</formula>
        <label>Other Wallet Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Our_Wallet_Quantity__c</fullName>
        <label>Our Wallet Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Our_Wallet_Share__c</fullName>
        <formula>IF(ISNULL(ALTF__Wallet_Size__c ), NULL, IF(ALTF__Wallet_Size__c == 0, 0, ALTF__Our_Wallet_Value__c /  ALTF__Wallet_Size__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Our Wallet Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Our_Wallet_Value__c</fullName>
        <label>Our Wallet Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Solution__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>AM Solution</label>
        <referenceTo>ALTF__Solution__c</referenceTo>
        <relationshipName>AM_Solutions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Wallet_Quantity__c</fullName>
        <label>Wallet Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Wallet_Size__c</fullName>
        <label>Wallet Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Altify Account Solution</label>
    <nameField>
        <label>Account_Solution__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>